# CopilotKit

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.json
.claude/skills/copilotkit-demo-parity/: SKILL.md
.claude/specs/: lgp-d5-coverage.md
.github/workflows/: ghcr_unlinked_packages.yml  prerelease.yml  showcase_build.yml  showcase_deploy.yml  showcase_eval.yml  showcase_eval_check.yml  showcase_keep-alive.yml  static_quality.yml  test_e2e-showcase-on-demand.yml
docs/: middleware.ts  next.config.mjs
docs/lib/: track-command-copy.ts
examples/integrations/langgraph-fastapi/agent/: main.py  pyproject.toml
examples/integrations/langgraph-fastapi/agent/src/: agent.py
scripts/: validate-integration-pins.ts
scripts/__tests__/: validate-integration-pins.test.ts
sdk-python/: pyproject.toml
sdk-python/copilotkit/: copilotkit_lg_middleware.py
sdk-python/tests/: test_copilotkit_lg_middleware.py
showcase/: .gitignore  DEBUGGING.md  RAILWAY.md  README.md  RUNBOOK.md  docker-compose.local.yml
showcase/aimock/: RAILWAY.md  d5-all.json  feature-parity.json
showcase/eval-webhook/: Dockerfile  package-lock.json  package.json
showcase/harness/: README.md  package.json
showcase/ops/: Dockerfile  README.md
showcase/scripts/: bundle-demo-content.ts  fail-baseline.json  generate-registry.ts  generate-starters.ts  sync-docs-from-main.ts  validate-fixture-tool-surface.ts  verify-railway-image-refs.ts
showcase/shared/: feature-registry.json  manifest.schema.json
showcase/shell-docs/: next.config.ts  package-lock.json  package.json
(+1130 files in other folders)
