[project]
name = "agent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "copilotkit==0.1.87",
  "langchain==1.2.15",
  "langchain-openai==1.1.0",
  "langchain-anthropic==1.3.4",
  "langgraph==1.1.6",
  "langsmith==0.4.49",
  "openai==1.68.2",
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "ag-ui-langgraph==0.0.34",
  "ag-ui-protocol==0.1.18",
  "pydantic>=2.0.0,<3.0.0",
]
